# simple_gcp_connector

./: README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
src/simple_gcp_connector/: .git-commit-message  __init__.py  cloud_sql.py  psycopg.py  sqlalchemy.py  token_provider.py
tests/: test_imports.py  test_integration.py  test_metadata.py  test_sqlalchemy_unit.py
